--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="lowkeymedia.png"widht="1385" height="1385"alt=lowkey media logo>
+<img src="lowkeymedia.png"widht="1385" height="980"alt=lowkey media logo>
   <h1 className="text-5xl font-bold mb-4">LowKey Visuals.</h1>
 
 <p style="
@@ -55,7 +55,8 @@
     <img src="pic 2.png" alt="My Work" style="width:100%; height:200px; object-fit:cover; border-radius:10px; border:2px solid #f5d27a;">
     <img src="pic 3.png" alt="My Work" style="width:100%; height:200px; object-fit:cover; border-radius:10px; border:2px solid #f5d27a;">
     <img src="pic 4.png" alt="My Work" style="width:100%; height:200px; object-fit:cover; border-radius:10px; border:2px solid #f5d27a;">
-  </div>
+    <img src="pic 5.png" alt="My Work" style="width:100%; height:200px; object-fit:cover; border-radius:10px; border:2px solid #f5d27a;">
+</div>
 </section>
 
 
